--- a/giaodien/css/css/style.css
+++ b/giaodien/css/css/style.css
@@ -18,8 +18,8 @@ body {
 .wrap input {
 	border: none;
 	background: #fff;
-  font-family:Lato ;
-  font-weight:700 ;
+    font-family:Lato ;
+    font-weight:700 ;
 	display: block;
 	height: 40px;
 	outline: none;
@@ -44,6 +44,10 @@ body {
 }
 .wrap input[type="password"] {
 	border-radius: 0px 0px 7px 7px ;
+}
+
+.wrap input[type="passuser"] {
+	border-radius: 0px 0px 0px 0px ;
 }
 
 .forgot_link {
